# api/v1/auth/entity.go
@@ -28,3 +28,14 @@ type WxUser struct {
 	Updated   time.Time `db:"updated" json:"updated"`
 	UpdatedBy string    `db:"updated_by" json:"updated_by"`
 }
+
+type Staff struct {
+	ID        int64     `db:"id" json:"id"`
+	Username  string    `db:"username" json:"username"`
+	Password  string    `db:"password" json:"password"`
+	Status    int       `db:"status" json:"status"`
+	Created   time.Time `db:"created" json:"created"`
+	CreatedBy string    `db:"created_by" json:"created_by"`
+	Updated   time.Time `db:"updated" json:"updated"`
+	UpdatedBy string    `db:"updated_by" json:"updated_by"`
+}
