# api/v1/auth/router.go
@@ -5,6 +5,7 @@ import "github.com/gin-gonic/gin"
 func Routers(g *gin.RouterGroup) {
 	g.POST("/signin", Signin)
 	g.POST("/wx/signin", WxSignin)
+	g.POST("/staff/signin", StaffSignin)
 }
 
 func AuthRouter(g *gin.RouterGroup) {
@@ -12,4 +13,9 @@ func AuthRouter(g *gin.RouterGroup) {
 	g.GET("/adminusers", GetAdminUserList)
 	g.GET("/adminusers/:id", GetAdminUserByID)
 	g.PUT("/adminusers/:id/passwords", UpdateAdminPassword)
+
+	g.POST("/staffs", NewStaff)
+	g.GET("/staffs", GetStaffList)
+	g.GET("/staffs/:id", GetStaffByID)
+	g.PUT("/staffs/:id/passwords", UpdateStaffPassword)
 }
